# evernote2obsidian

./: evernote2md.py  evernote2obsidian.py  filename_sanitizer.py  html_fixes.py  main.py  pyproject.toml  requirements.txt
